--- a/docs/source/pyActigraphy-Intro.ipynb
+++ b/docs/source/pyActigraphy-Intro.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Introduction to pyActigraphy"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This introduction notebook illustrates some basic functionalities of the pyActigraphy package:\n",
     "\n",
@@ -20,7 +26,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "First, load the pyActigraphy package:"
    ]
@@ -33,16 +42,34 @@
      "end_time": "2018-12-11T14:54:10.859845Z",
      "start_time": "2018-12-11T14:54:08.782740Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'pyActigraphy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a6a29ec940bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpyActigraphy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'pyActigraphy'"
+     ]
+    }
+   ],
    "source": [
     "import pyActigraphy"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "To display figures, the plotly package is used:"
    ]
@@ -55,6 +82,9 @@
      "end_time": "2018-12-11T14:54:11.727414Z",
      "start_time": "2018-12-11T14:54:10.868351Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -80,7 +110,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## How to read an individual actigraphy file\n",
     "\n",
@@ -93,7 +126,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For each file format, a dedicated function allows users to simply read in the file:\n",
     "\n",
@@ -106,7 +142,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "As an example, let's read a .awd file located in the test directory of the pyActigraphy package:"
    ]
@@ -119,6 +158,9 @@
      "end_time": "2018-12-11T14:54:11.745875Z",
      "start_time": "2018-12-11T14:54:11.729559Z"
     },
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -128,28 +170,40 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This function simply returns an instance of the RawAWD class. Basically, it is an object that contains the data extracted from the actigraphy file. In addition, this object has access to several methods that allow users to inspect the content of the file header."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "NB: The other `read_raw_XXX` functions return the same kind of object. So the commands below remain valid, whatever the type of actigraphy file that is read."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## How to retrieve header info"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Subject's name:"
    ]
@@ -162,6 +216,9 @@
      "end_time": "2018-12-11T14:54:11.753915Z",
      "start_time": "2018-12-11T14:54:11.748051Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -182,7 +239,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Start time of the data acquisition:"
    ]
@@ -195,6 +255,9 @@
      "end_time": "2018-12-11T14:54:11.763619Z",
      "start_time": "2018-12-11T14:54:11.757586Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -215,7 +278,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Duration of the data acquisition:"
    ]
@@ -228,6 +294,9 @@
      "end_time": "2018-12-11T14:54:11.774207Z",
      "start_time": "2018-12-11T14:54:11.767045Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -248,7 +317,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Serial number of the device:"
    ]
@@ -261,6 +333,9 @@
      "end_time": "2018-12-11T14:54:11.783885Z",
      "start_time": "2018-12-11T14:54:11.777603Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -281,7 +356,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Acquisition frequency:"
    ]
@@ -294,6 +372,9 @@
      "end_time": "2018-12-11T14:54:11.791773Z",
      "start_time": "2018-12-11T14:54:11.786406Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -314,28 +395,40 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## How to plot the data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Several python packages are available to visualise data, such as [Matplotlib](https://matplotlib.org/) or [Bokeh](http://bokeh.pydata.org/en/latest/)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Here, the package [plotly](https://plot.ly/) is used as it provides an interactive viewer but feel free to use the package you prefer."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "First, create a layout for the plot:"
    ]
@@ -348,6 +441,9 @@
      "end_time": "2018-12-11T14:54:12.492138Z",
      "start_time": "2018-12-11T14:54:11.795005Z"
     },
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -362,7 +458,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And then, simply plot the data:"
    ]
@@ -375,6 +474,9 @@
      "end_time": "2018-12-11T14:54:13.726638Z",
      "start_time": "2018-12-11T14:54:12.494332Z"
     },
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -23856,9 +23958,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (pyActi)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyactigraphy_py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -23870,7 +23972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
